# ghost-browser-agent

./: .gitignore  README.md  cli.py  pyproject.toml
extension/: background.js  manifest.json
src/browser_agent/: agent.py  ai.py  browser.py  config.py  daemon.py  dom.py  screenshot.py  telegram_bot.py  tools.py
